--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <p>placeholder</p>
-    <h1>hello</h1>
+    <h1>hellooooooo</h1>
     <h2>bonjourrrrrrr</h2>
     <script src="script.js"></script>
   </body>
